--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -140,7 +140,7 @@
             <img src="C:\Users\hp\Documents\FE\pics1\logo_headphones.png" style="margin-left: 5px; margin-top: 5px; width: 200px;">
             <div class="socials">
                 <a href="#">Facebook</a>
-                <a href="#">Twitter</a>
+                <a href="#">X</a>
                 <a href="#">Instagram</a>
             </div>
         </div>
